Updated image fill, video height and white space issue

--- a/css/index.css
+++ b/css/index.css
@@ -27,16 +27,20 @@ footer {
 .placeholder-img img{
     width: 100%;
     height: 400px;
-    object-fit: fill;
+    object-fit: cover;
 }
 .placeholder-video {
     background-color: #d3d3d3;
     width: 100%;
-    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
     color: #555;
+}
+
+.placeholder-video iframe {
+    width: 100%;
+    height: 300px;
 }
 .flex-container {
     display: flex;
@@ -49,4 +53,28 @@ footer {
     background-color: #f4f4f4;
     text-align: center;
     border: 1px solid #ddd;
+}
+
+@media (min-width: 1025px) {
+    .placeholder-video iframe {
+        height: 625px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .placeholder-video iframe {
+        height: 525px;
+    }
+}
+
+@media (min-width: 425px) and (max-width: 768px) {
+    .placeholder-video iframe {
+        height: 425px;
+    }
+}
+
+@media (max-width: 424px) {
+    .placeholder-video iframe {
+        height: 300px;
+    }
 }
